# jode

./: .classpath  .project  ChangeLog  INSTALL  MANIFEST.MF  NEWS  TODO  build.xml  config.props  create.sh  makesnapshot  prj.el  project.dtd
doc/: applet.htp  bluesky.htp  download.htp  faq.htp  favicon.xpm  feedback.htp  footer.inc  header.inc  history.htp  htp.def  index.htp  jode.htt  jode.texi  license.htp  links.htp  menu.inc  myproject.jos  pattern.txt  technical.texi  usage.htp
doc/gimp/: bytecode.txt  jode-logo.xcf  statement.txt  vects.fig
jode/: jode.jos
scripts/: addHeader.pl  createStackDelta.pl  javaDependencies.pl  jcpp.pl  php2html.pl
test/: AnonymousClass.java  AnonymousJavac.java  ArrayCloneTest.java  ArrayTest.java  AssignOp.java  Base.j  Child.j  ClassOpTest.java  ConstantTypes.java  CountOpcodes.java  EvilTypes.j  Expressions.java  Flow.java  For.java  HintTypeTest.java  IfCombine.java  InlineTest.java  InlinedAnon.java  InnerClass.java  InnerCompat.java  JavacBug.java  JsrTest.j  LocalTypes.java  Makefile.am  MethodScopedClass.java  NestedAnon.java  ObfuscateStrings.j  OptimizeTest.java  OptimizerTest.java  PrivateHideTest.java  RemovePopExample.j  ResolveConflicts.java  StackOps.j  TriadicExpr.java  TryCatch.java  Unreach.java  removepop.jodescript  simpletests.sh
test/innerclasses/: CheckPrivate.java  CheckSuperRemove.java
test/src/net/sf/jode/bytecode/: BasicBlockWriterTest.java  BasicBlocksTest.java  BlockTest.java
test/src/net/sf/jode/flow/: TrExcTest.java
test/src/net/sf/jode/obfuscator/modules/: ConstAnaTest.java
(+195 files in other folders)
