JAVA = @JAVA@
JAVAC = @JAVAC@
CLASSLIB = @CLASSLIB@
JFLAGS = 
TESTS_ENVIRONMENT=JAVA=$(JAVA) JAVAC=$(JAVAC) JFLAGS=$(JFLAGS) srcdir=$(srcdir) top_srcdir=$(top_srcdir) top_builddir=$(top_builddir) CLASSLIB=$(CLASSLIB)

TESTS = simpletests.sh

EXTRA_DIST = \
simpletests.sh \
AnonymousClass.java \
AnonymousJavac.java \
ArrayCloneTest.java \
ArrayTest.java \
AssignOp.java \
Base.j \
Child.j \
ClassOpTest.java \
ConstantTypes.java \
CountOpcodes.java \
EvilTypes.j \
Expressions.java \
Flow.java \
For.java \
HintTypeTest.java \
IfCombine.java \
InlineTest.java \
InlinedAnon.java \
InnerClass.java \
InnerCompat.java \
JavacBug.java \
JsrTest.j \
LocalTypes.java \
MethodScopedClass.java \
NestedAnon.java \
ObfuscateStrings.j \
OptimizeTest.java \
OptimizerTest.java \
PrivateHideTest.java \
RemovePopExample.j \
ResolveConflicts.java \
StackOps.j \
TriadicExpr.java \
TryCatch.java \
Unreach.java